# s2

./: .gitmodules  .rustfmt.toml  AGENTS.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  cliff.toml  deny.toml  justfile  release-plz.toml  spec.json
.claude/skills/release/: SKILL.md
.github/workflows/: bump-chart-version.yml  ci.yml  helm-release.yml  release-cli.yml  release-plz.yml  release.yml  sdk-tests.yml  sync_specs.yaml  update_protos.yaml
api/: CHANGELOG.md  Cargo.toml  build.rs
api/specs/s2/v1/: openapi.json  s2.proto
api/specs/s2/v1alpha/: s2.proto
api/src/: data.rs  lib.rs  mime.rs
api/src/v1/: access.rs  basin.rs  config.rs  error.rs  extractors.rs  metrics.rs  mod.rs
api/src/v1/stream/: extract.rs  json.rs  mod.rs  s2s.rs  sse.rs
api/src/v1/stream/proto/: mod.rs  s2.v1.rs
charts/s2-lite/: Chart.yaml  README.md
charts/s2-lite-helm/: Chart.yaml  README.md  values.yaml
charts/s2-lite-helm/templates/: _helpers.tpl  deployment.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
charts/s2-lite/templates/: NOTES.txt  ingress.yaml  servicemonitor.yaml
cli/: CHANGELOG.md  Cargo.toml  schema.json
cli/src/: apply.rs  bench.rs  cli.rs  config.rs  error.rs  lite.rs  main.rs  ops.rs  record_format.rs  types.rs
cli/src/tui/: app.rs  ui.rs
cli/tests/: cli.rs  integration.rs
common/: CHANGELOG.md  Cargo.toml
common/src/: access.rs  caps.rs  config.rs  deep_size.rs  encryption.rs  http.rs  lib.rs  maybe.rs  read_extent.rs
common/src/record/: batcher.rs  command.rs  encryption.rs  envelope.rs  fencing.rs  metering.rs  mod.rs
common/src/types/: access.rs  basin.rs  config.rs  metrics.rs  mod.rs  resources.rs  stream.rs  strings.rs
docs/adr/: csek.md
hooks/: pre-commit
lite/: CHANGELOG.md  Cargo.toml  Dockerfile
lite/docs/: notes.md
lite/src/: init.rs  lib.rs  metrics.rs  server.rs
lite/src/backend/: append.rs  basins.rs  core.rs  durability_notifier.rs  error.rs  mod.rs  ops.rs  read.rs  slatedb.rs  store.rs  stream_id.rs  streamer.rs  streams.rs
lite/src/backend/bgtasks/: basin_deletion.rs  mod.rs  stream_doe.rs  stream_trim.rs
lite/src/backend/kv/: basin_deletion_pending.rs  mod.rs  stream_doe_deadline.rs  stream_fencing_token.rs  stream_id_mapping.rs  stream_meta.rs  stream_record_data.rs  stream_record_timestamp.rs  stream_tail_position.rs  stream_trim_point.rs  timestamp.rs
lite/src/handlers/: mod.rs
lite/src/handlers/v1/: access_tokens.rs  basins.rs  error.rs  metrics.rs  mod.rs  paths.rs  records.rs  streams.rs
lite/tests/backend/: common.rs
lite/tests/backend/common/: setup.rs
lite/tests/backend/control_plane/: basin.rs  stream.rs
lite/tests/backend/data_plane/: append.rs  mixed.rs  read.rs  read_follow.rs
resource-spec/src/: lib.rs
sdk/: CHANGELOG.md  Cargo.toml
sdk/src/: api.rs  client.rs  frame_signal.rs  lib.rs  ops.rs  producer.rs  retry.rs  types.rs
sdk/src/session/: append.rs  read.rs
sdk/tests/: account_ops.rs  basin_ops.rs  stream_ops.rs
sdk/tests/common/: mod.rs
