[workspace]
resolver = "2"
members = ["api", "common", "lite"]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/s2-streamstore/s2"
homepage = "https://s2.dev"

[workspace.dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = "0.12"
axum-server = "0.8.0"
base64ct = { version = "1.8.2", features = ["alloc"] }
blake3 = "1.8.3"
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive"] }
compact_str = "0.9.0"
const_format = "0.2.35"
dashmap = "6.1.0"
enum-ordinalize = "4.3.2"
enumset = "1.1.10"
eyre = "0.6.12"
flate2 = "1.1.5"
futures = "0.3.31"
http = "1.4.0"
itertools = "0.14.0"
mime = "0.3.17"
parking_lot = "0.12.5"
proptest = "1.9.0"
prost = "0.14.1"
prost-build = "0.14.1"
rand = "0.9.2"
rcgen = "0.14"
rkyv = "0.8.13"
rstest = "0.26.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
slatedb = "0.10.0"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde", "parsing", "formatting"] }
tokio = "1.49.0"
tokio-util = "0.7.18"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["time"] }
uuid = { version = "1.19.0", features = ["v4"] }
zstd = "0.13.3"
