[workspace]
resolver = "2"
members = ["api", "common", "lite"]

[workspace.package]
version = "0.3.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/s2-streamstore/s2"
homepage = "https://s2.dev"

[workspace.dependencies]
async-stream = "0.3"
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
axum = "0.8"
axum-server = "0.8"
base64ct = "1.8"
blake3 = "1.8"
bytes = "1.11"
bytesize = "2.3"
clap = "4.5"
compact_str = "0.9"
dashmap = "6.1"
enum-ordinalize = "4.3"
enumset = "1.1"
eyre = "0.6"
flate2 = "1.1"
futures = "0.3"
http = "1.4"
itertools = "0.14"
mime = "0.3"
mimalloc = "0.1"
parking_lot = "0.12"
prometheus = "0.14"
proptest = "1.9"
prost = "0.14"
prost-build = "0.14"
rand = "0.9"
rcgen = "0.14"
rkyv = "0.8"
rstest = "0.26"
s2-api = { version = "0.3.5", path = "api" }
s2-common = { version = "0.3.5", path = "common" }
serde = "1.0"
serde_json = "1.0"
slatedb = "0.10"
strum = "0.27"
thiserror = "2.0"
time = "0.3"
tokio = "1.49"
tokio-util = "0.7"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = "5.4"
uuid = "1.20"
zstd = "0.13"

[patch.crates-io]
slatedb = { git = "https://github.com/slatedb/slatedb", rev = "e9022295cd03c7b3273c9b6518c8daff91d677c5" }
utoipa = { git = "https://github.com/infiniteregrets/utoipa", rev = "9cd181d40ac0a50551ebe1995a4d73e8685890d6" }
