[package]
name = "s2-common"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
axum = ["dep:axum"]
clap = ["dep:clap"]
rkyv = ["dep:rkyv", "compact_str/rkyv"]
utoipa = ["dep:utoipa"]

[dependencies]
axum = { workspace = true, optional = true  }
bytes = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true, optional = true }
compact_str = { workspace = true, features = ["serde"] }
const_format = { workspace = true }
enum-ordinalize = { workspace = true }
enumset = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
rkyv = { workspace = true, optional = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
utoipa = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
serde_json = { workspace = true }
