[package]
name = "s2-lite"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
compact_str = { workspace = true }
dashmap = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
s2-api = { path = "../api" }
s2-common = { path = "../common", features = ["clap"] }
slatedb = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
